--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,9 @@ License: `No license'
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+imports:
+        shiny,
+        shinymanager,
+        readxl,
+        dplyr,
+        tidyr
